# writer-studio

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx-ssl.conf  nginx.conf  pyproject.toml
.githooks/: pre-commit
scripts/: bump_version.py
src/writer_studio/: __init__.py  logging.py
src/writer_studio/api/: server.py
src/writer_studio/cli/: character_profile.py  evaluate_chapter.py
src/writer_studio/persistence/: db.py
src/writer_studio/teams/: character_team.py  novel_eval_team.py
tasks/character_profile/: en.yaml  zh-CN.yaml
tasks/novel_eval/: de.yaml  en.yaml  es.yaml  fr.yaml  it.yaml  jp.yaml  ko.yaml  ru.yaml  zh-CN.yaml  zh-TW.yaml
tests/: test_api_evaluate_error_and_persist.py  test_api_evaluate_json_messages.py  test_api_health_smoke.py  test_api_profiles_create_and_by_name_not_found.py  test_api_server_extra.py  test_api_server_routes.py  test_api_templates_create_list.py  test_api_templates_field_search.py  test_api_use_template_variants.py  test_character_profile_cli_create_update_extra.py  test_character_profile_cli_noninteractive.py  test_character_profile_unit.py  test_character_team_basic.py  test_character_team_review_mock.py  test_cli_character_profile_main_list.py  test_cli_character_profile_paths.py  test_cli_character_profile_unit.py  test_cli_evaluate_chapter.py  test_db_ensure_dir_fallback.py  test_db_evaluations_save_get_search.py  test_db_extra_crud_search.py  test_db_init_vec_extension_unavailable.py  test_db_list_and_missing.py  test_db_profiles_templates.py  test_db_save_evaluation_no_embeddings.py  test_db_search_evaluations_vector_exception.py  test_db_search_evaluations_vector_success.py  test_db_update_edge_cases.py  test_logging.py  test_novel_eval_team.py  test_novel_eval_team_extra.py  test_smoke.py
